--- a/ui/documentUI.ui
+++ b/ui/documentUI.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>866</width>
-    <height>585</height>
+    <width>900</width>
+    <height>719</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>0</width>
+    <height>0</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>16777215</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Создание документа</string>
@@ -187,6 +199,21 @@ QDateEdit::down-arrow:disabled {
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_12">
+    <property name="spacing">
+     <number>8</number>
+    </property>
+    <property name="leftMargin">
+     <number>8</number>
+    </property>
+    <property name="topMargin">
+     <number>8</number>
+    </property>
+    <property name="rightMargin">
+     <number>8</number>
+    </property>
+    <property name="bottomMargin">
+     <number>8</number>
+    </property>
     <item>
      <widget class="QFrame" name="number_date_frame">
       <property name="frameShape">
@@ -197,7 +224,7 @@ QDateEdit::down-arrow:disabled {
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_3">
        <property name="spacing">
-        <number>16</number>
+        <number>32</number>
        </property>
        <property name="leftMargin">
         <number>16</number>
@@ -221,7 +248,7 @@ QDateEdit::down-arrow:disabled {
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout">
           <property name="spacing">
-           <number>9</number>
+           <number>8</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -297,7 +324,7 @@ QDateEdit::down-arrow:disabled {
          </property>
          <layout class="QHBoxLayout" name="horizontalLayout_2">
           <property name="spacing">
-           <number>19</number>
+           <number>8</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -402,7 +429,7 @@ QDateEdit::down-arrow:disabled {
       </property>
       <layout class="QHBoxLayout" name="horizontalLayout_8">
        <property name="spacing">
-        <number>8</number>
+        <number>32</number>
        </property>
        <property name="leftMargin">
         <number>16</number>
@@ -469,7 +496,7 @@ QDateEdit::down-arrow:disabled {
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_2">
              <property name="spacing">
-              <number>8</number>
+              <number>16</number>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -493,7 +520,7 @@ QDateEdit::down-arrow:disabled {
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_4">
                 <property name="spacing">
-                 <number>33</number>
+                 <number>8</number>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -560,7 +587,7 @@ QDateEdit::down-arrow:disabled {
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_5">
                 <property name="spacing">
-                 <number>19</number>
+                 <number>8</number>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -676,7 +703,7 @@ QDateEdit::down-arrow:disabled {
             </property>
             <layout class="QVBoxLayout" name="verticalLayout_5">
              <property name="spacing">
-              <number>8</number>
+              <number>16</number>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -700,7 +727,7 @@ QDateEdit::down-arrow:disabled {
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_6">
                 <property name="spacing">
-                 <number>33</number>
+                 <number>8</number>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -767,7 +794,7 @@ QDateEdit::down-arrow:disabled {
                </property>
                <layout class="QHBoxLayout" name="horizontalLayout_7">
                 <property name="spacing">
-                 <number>19</number>
+                 <number>8</number>
                 </property>
                 <property name="leftMargin">
                  <number>0</number>
@@ -879,7 +906,7 @@ QDateEdit::down-arrow:disabled {
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_6">
           <property name="spacing">
-           <number>8</number>
+           <number>16</number>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -903,7 +930,7 @@ QDateEdit::down-arrow:disabled {
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_9">
              <property name="spacing">
-              <number>14</number>
+              <number>8</number>
              </property>
              <property name="leftMargin">
               <number>0</number>
@@ -972,7 +999,7 @@ QDateEdit::down-arrow:disabled {
             </property>
             <layout class="QHBoxLayout" name="horizontalLayout_10">
              <property name="spacing">
-              <number>30</number>
+              <number>8</number>
              </property>
              <property name="leftMargin">
               <number>0</number>
